terminando a estilização da tela de login e iniciando a tela do index com a função de cadastrar o saldo do usuario

--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="loginContainer">
         <div id="loginContent">
-             <h2 id="login-title">seja bem vindo ao sistema de finanças</h2>
+             <h2 id="login-title">Seja bem vindo <br> ao seu <br>sistema de finanças</h2>
 
              
                 <a href="./src/views/index.html">
