corrigindo os caminhos que estavam dando como o style.css e app.js ao abrir um servidor via php

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Principal</title>
-    <link rel="icon" href="/src/public/images/Logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="/src/public/style.css">
+    <link rel="icon" href="/public/images/Logo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     <header>
         <div class="dadosContainer">
-            <img  src="/src/public/images/LogoHeader.png" alt="Logo">
+            <img  src="/public/images/LogoHeader.png" alt="Logo">
 
             <div class="dadosContent">
                 <p>Nome: ADMIN</p>
@@ -40,5 +40,5 @@
         <div class="button" onclick="alert('Botão 3 clicado!')">Editar</div>
     </div>
 
-    <script src="/src/public/app.js"></script>
+    <script src="/public/app.js"></script>
 </html>
