--- a/src/login.html
+++ b/src/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aplicativo finanças</title>
-    <link rel="stylesheet" href="./src/public/style.css">
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     <div class="loginContainer">
@@ -12,7 +12,7 @@
              <h2 id="login-title">Seja bem vindo <br> ao seu <br>sistema de finanças</h2>
 
              
-                <a href="./src/views/index.html">
+                <a href="/index.html">
                     <button id="login">Entrar</button>
                 </a>
                 
