Modificação para conexão no banco de dados e inserção de saldo
tentativa de adicionar a integração com o banco de dados

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <form action="app.php" method="post">
+        <form action="app.php" method="post" id="saldo">
             <div class="dadosContainer">
                 <img src="/public/images/LogoHeader.png" alt="Logo">
 
