Mudança nos caminhos
correção nos caminhos do app.php para que comece a funcionar corretamente e testar o Banco, assim progredindo no projeto, e tambem acertando algumas coisas no index

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <form action="app.php" method="post" id="saldo">
+        <form action="/controllers/app.php" method="post" id="saldo">
             <div class="dadosContainer">
                 <img src="/public/images/LogoHeader.png" alt="Logo">
 
@@ -21,7 +21,7 @@
 
                     <div id="saldoContainer">
                         <span id="saldoText">Saldo:
-                            <button id="saldoInput">cadastrar Saldo</button>
+                            <input type="submit" value="extrato">
                         </span>
                     </div>
 
