--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,8 @@
                     <p>Nome: ADMIN</p>
                     <br>
 
-                    <div id="saldoContainer">
-                        <span id="saldoText">Saldo:
-                            <button id="saldoInput">cadastrar Saldo</button>
-                        </span>
-                    </div>
+                    <label for="saldo"> Saldo:</label>
+                    <input type="number" id="saldo">
 
                 </div>
 
