--- a/src/index.html
+++ b/src/index.html
@@ -19,16 +19,8 @@
                     <p>Nome: ADMIN</p>
                     <br>
 
-<<<<<<< HEAD
                     <label for="saldo"> Saldo:</label>
-                    <input type="number" id="saldo">
-=======
-                    <div id="saldoContainer">
-                        <span id="saldoText">Saldo:
-                            <input type="submit" value="extrato">
-                        </span>
-                    </div>
->>>>>>> 9d4d51af36797b7bec97f05f2d12ac2110048dfa
+                    <input type="number" id="saldo" name="saldo">
 
                 </div>
 
